# freshbot

./: .gitignore  README.md  pyproject.toml
docs/: db-schema.md  freshbot_phase0.md  initial-plan.md  instructions.md
legacy_ingestion/etl/: .gitignore  __init__.py
legacy_ingestion/etl/adapters/: __init__.py  sink_postgres.py
legacy_ingestion/etl/docs/: runbook.md
legacy_ingestion/etl/flows/: __init__.py  flow_document_intake.py  flow_launcher.py  flow_table_ingest.py
legacy_ingestion/etl/policies/: __init__.py
legacy_ingestion/etl/registry/: __init__.py  etl_tables.yml
legacy_ingestion/ops_scripts/: embed_chunks.py  ingest_docs.py  migrate.py  reset_kb.py
legacy_ingestion/tests/: test_intake_pipeline.py
project-docs/: codex-demo.txt  codex-mcp.md  documentation-guide.md  project-architecture.md  project-ingestion.md
project-docs/tools/: prefect_flow_executor.md  tool_agent_catalog.md  tool_assign_tasks_to_project.md  tool_create_project.md  tool_document_ingest.md  tool_fetch_project.md  tool_graph_capabilities_map.md  tool_kb_search.md  tool_manifest_fetch.md  tool_materialize_goap_plan.md  tool_prefect_flow_catalog.md  tool_search_agents.md  tool_search_tools.md  tool_set_task_dependencies.md  tool_update_project.md
searxng/: searxng-schemas.md  searxng.md  test_searxng_search.py
src/freshbot/: __init__.py  prompts.py  references.py
tests/: conftest.py  test_freshbot_gateway.py  test_freshbot_ingestion.py  test_freshbot_prefect_executor.py  test_freshbot_runtime.py  test_project_ingest_wrappers.py
tests/data/: sample_code.py
(+84 files in other folders)
